--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 [metadata]
 name = strands
 description = "Strands - Standing waves approximations for the n-dimensional Schrödinger problem (with n = 2)."
-long_description = file: src/python/description.md
+long_description = file: readme.md
 long_description_content_type = text/markdown
 author = Toon Baeyens
 author_email = toon.baeyens@ugent.be
