add upload action

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ platforms = any
 url = https://github.com/twist-numerical/strands
 project_urls =
     Source  = https://github.com/twist-numerical/strands
-keywords = setuptools extension cpp cmake build package pypi bindings swig pybind11
+keywords = schrodinger equation, eigenvalues, numerical methods
 classifiers =
 
 [options]
