Build and upload python wheels (#2)

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 [metadata]
 name = strands
 description = "Strands - Standing waves approximations for the n-dimensional Schrödinger problem (with n = 2)."
-long_description = file: src/python/description.md
+long_description = file: readme.md
 long_description_content_type = text/markdown
 author = Toon Baeyens
 author_email = toon.baeyens@ugent.be
@@ -11,7 +11,7 @@ platforms = any
 url = https://github.com/twist-numerical/strands
 project_urls =
     Source  = https://github.com/twist-numerical/strands
-keywords = setuptools extension cpp cmake build package pypi bindings swig pybind11
+keywords = schrodinger equation, eigenvalues, numerical methods
 classifiers =
 
 [options]
@@ -22,4 +22,3 @@ package_dir =
 python_requires = >=3.6
 install_requires =
     numpy
-    cmake_build_extension
